tests/ui/feature-gates/feature-gate-closure_track_caller.stderr
error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:6:20
   |
LL |     let _closure = #[track_caller] || {};
   |                    ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:7:35
   |
LL |     let _coroutine = #[coroutine] #[track_caller] || { yield; };
   |                                   ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/feature-gate-closure_track_caller.rs:8:19
   |
LL |     let _future = #[track_caller] async {};
   |                   ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
